Add TrustedReferences Download